# book-deeplearning4-rs

./: Cargo.toml  LICENSE  README.md
ch01/: .gitignore  Cargo.toml
ch01/src/: agent.rs  alpha_agent.rs  bandit.rs  lib.rs  non_stat_bandit.rs  plot.rs
ch04/: Cargo.toml
ch04/src/: utils.rs
common/: Cargo.toml
common/src/: gridworld.rs  gridworld_render.rs  lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
