[package]
name = "ch01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
plotters = "0.3.1"

[[bin]]
name = "avg"
path = "src/bin/avg.rs"

[[bin]]
name = "bandit"
path = "src/bin/bandit.rs"

[[bin]]
name = "bandit_avg"
path = "src/bin/bandit-avg.rs"

[[bin]]
name = "non_stationary"
path = "src/bin/non-stationary.rs"
